<resources>
    <string name="app_name">ChatApp</string>
    <string name="NULL"> </string>

    <string name="ERRDateFormat">Data trebuie sa aiba formatul dd/mm/yyyy</string>
    <string name="ERRDateAge">Nu ai varsta necesara (14 ani)</string>
    <string name="ERRName">Numele trebuie sa aiba minim 3 caractere</string>
    <string name="ERRId">ID–ul e format doar din litere, cifre, ., _ si are 4–16 caractere</string>
    <string name="ERREmail">Email-ul e invalid</string>
    <string name="ERRPassword">Parola trebuie sa fie de minim 6 caractere, sa contina cel putin o litera mare, mica si un numar</string>
    <string name="ERRLogin">Email sau parola invalida</string>
    <string name="id_not_unique">ID-ul e deja folosit de cineva!</string>
    <string name="general_error">A aparut o eroare.</string>
    <string name="update_profile">UPDATE PROFILE</string>


    <string name="register">Inregistrare</string>
    <string name="login">Logare</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="name">Nume</string>
    <string name="birthday">Data nasterii</string>
    <string name="noAccount">Nu ai cont? Inregistreaza-te aici!</string>
    <string name="or">sau</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">2545887775685940</string>
    <string name="fb_login_protocol_scheme">fb2545887775685940</string>


</resources>
