<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerViewModel"
            type="ro.marc.chatapp.viewmodel.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="48dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/appicon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/register"
                android:textColor="#000000"
                android:textIsSelectable="false"
                android:textStyle="bold"
                android:textSize="32sp"
                android:layout_marginBottom="12dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/id"
                    android:maxLength="16"
                    android:text="@={registerViewModel.registerModel.id}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:visibility="@{registerViewModel.visibility}">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:text="@={registerViewModel.registerModel.email}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/nume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:text="@={registerViewModel.registerModel.name}"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:visibility="@{registerViewModel.visibility}"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={registerViewModel.registerModel.password}"
                    android:hint="@string/password"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/birthday"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:text="@={registerViewModel.registerModel.birthday}"
                    android:hint="@string/birthday" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/errField"
                android:layout_gravity="start"
                android:textColor="@color/red"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerBtn"
                android:backgroundTint="@color/main"
                android:text="@string/register"
                android:height="56dp"
                android:onClick="@{() -> registerViewModel.onRegisterClicked()}"/>




        </LinearLayout>
    </ScrollView>
</layout>