<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="ro.marc.chatapp.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="48dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:id="@+id/constraintLayout">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/appicon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="63dp"
                tools:layout_conversion_absoluteWidth="72dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/titlu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textIsSelectable="false"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                tools:layout_conversion_absoluteHeight="43dp"
                tools:layout_conversion_absoluteWidth="363dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titlu"
                app:startIconDrawable="@drawable/email"
                tools:layout_conversion_absoluteHeight="53dp"
                tools:layout_conversion_absoluteWidth="363dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={loginViewModel.loginModel.email}"
                    tools:layout_conversion_absoluteHeight="53dp"
                    tools:layout_conversion_absoluteWidth="363dp"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="218dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/l_email"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/password"
                tools:layout_conversion_absoluteHeight="53dp"
                tools:layout_conversion_absoluteWidth="363dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={loginViewModel.loginModel.password}"
                    tools:layout_conversion_absoluteHeight="53dp"
                    tools:layout_conversion_absoluteWidth="363dp"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="287dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:height="56dp"
                android:backgroundTint="@color/main"
                android:onClick="@{() -> loginViewModel.onLoginClicked()}"
                android:text="@string/login"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/l_pass"
                tools:layout_conversion_absoluteHeight="56dp"
                tools:layout_conversion_absoluteWidth="363dp" />

            <TextView
                android:id="@+id/errField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="0dp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/errField"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="363dp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_editor_absoluteY="447dp"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_conversion_absoluteWidth="0dp" />


            <ImageButton
                android:id="@+id/buttonGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner"
                android:padding="8dp"
                android:src="@drawable/google"
                android:tint="#ffffff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_conversion_absoluteHeight="64dp"
                tools:layout_conversion_absoluteWidth="64dp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_editor_absoluteY="447dp"
                tools:layout_editor_absoluteX="224dp"
                tools:layout_conversion_absoluteWidth="0dp" />


            <ImageButton
                android:id="@+id/buttonFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/rounded_corner"
                android:padding="8dp"
                android:src="@drawable/facebook"
                android:tint="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_conversion_absoluteHeight="64dp"
                tools:layout_conversion_absoluteWidth="64dp" />

            <TextView
                android:id="@+id/noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="bottom"
                android:onClick="@{() -> loginViewModel.onNoAccountClicked(true)}"
                android:text="@string/noAccount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="203dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

